Add sd card example

--- a/platformio.ini
+++ b/platformio.ini
@@ -24,3 +24,16 @@ build_flags = -std=gnu++17
 build_unflags = -std=gnu++11
 lib_deps = 
     https://github.com/tomcombriat/DAC_MCP49XX
+
+[env:sdcard-test]
+platform = teensy
+board = teensy41
+framework = arduino
+test_filter = test_embedded
+upload_protocol = teensy-gui
+build_flags = -std=gnu++17
+build_unflags = -std=gnu++11
+build_src_filter = +<*> -<main.cpp> +<sdcard_test.cpp>
+lib_deps = 
+  https://github.com/greiman/SdFat
+    
