--- a/platformio.ini
+++ b/platformio.ini
@@ -35,3 +35,5 @@ upload_protocol = teensy-gui
 build_flags = -std=gnu++17
 build_unflags = -std=gnu++11
 build_src_filter = -<*> +<ddmotor.cpp>
+lib_deps = 
+    https://github.com/tomcombriat/DAC_MCP49XX
