--- a/platformio.ini
+++ b/platformio.ini
@@ -37,3 +37,26 @@ build_unflags = -std=gnu++11
 build_src_filter = -<*> +<ddmotor.cpp>
 lib_deps = 
     https://github.com/tomcombriat/DAC_MCP49XX
+    https://github.com/jrullan/StateMachine.git
+
+[env:sdcard]
+platform = teensy
+board = teensy41
+framework = arduino
+test_filter = test_embedded
+upload_protocol = teensy-gui
+build_flags = -std=gnu++17
+build_unflags = -std=gnu++11
+build_src_filter = -<*> +<logger.cpp>
+
+[env:statemachine]
+platform = teensy
+board = teensy41
+framework = arduino
+test_filter = test_embedded
+upload_protocol = teensy-gui
+build_flags = -std=gnu++17
+build_unflags = -std=gnu++11
+build_src_filter = -<*> +<statemachine.cpp>
+lib_deps = 
+    https://github.com/jrullan/StateMachine.git
