--- a/platformio.ini
+++ b/platformio.ini
@@ -22,9 +22,10 @@ test_filter = test_embedded
 upload_protocol = teensy-gui
 build_flags = -std=gnu++17
 build_unflags = -std=gnu++11
+build_src_filter = -<*> +<main.cpp>
 lib_deps = 
     https://github.com/tomcombriat/DAC_MCP49XX
-    https://github.com/tonton81/FlexCAN_T4.git
+    https://github.com/jrullan/StateMachine.git
 
 [env:ddmotor]
 platform = teensy
