--- a/platformio.ini
+++ b/platformio.ini
@@ -27,6 +27,18 @@ lib_deps =
     https://github.com/tomcombriat/DAC_MCP49XX
     https://github.com/jrullan/StateMachine.git
 
+[env:monitor]
+platform = teensy
+board = teensy41
+framework = arduino
+test_filter = test_embedded
+upload_protocol = teensy-gui
+build_flags = -std=gnu++17
+build_unflags = -std=gnu++11
+build_src_filter = -<*> +<monitor.cpp>
+lib_deps = 
+    https://github.com/tomcombriat/DAC_MCP49XX
+
 [env:ddmotor]
 platform = teensy
 board = teensy41
